@@ -3,6 +3,8 @@ Changes for templates:
   * Added checksums to templates (issue 176).
   * Added Disk Space (df) graph (issue 96).
   * Added Network graphs (issue 100).
+  * Added netstat graph (issue 101).
+  * Added JMX ThreadPool graph (issue 151).
 
 2011-01-22: version 1.1.8
 
